[package]
name = "bpma" # added an a because there is already a package called bpm
version = "0.1.2"
edition = "2024"
authors = ["Ariel Zvinowanda <taperazvi@gmail.com>"]
description = "Bpm - local binary package manager"
license = "MIT"
repository = "https://github.com/Kazan20/bpm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
calcbits = "0.1.1"
